--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@
 </script>
 
 <!--<script src="/index.js"></script>-->
-<link href="/howly/cssreset.css" rel="stylesheet">
-<link href="/howly/index.css" rel="stylesheet">
+<link href="/animals/cssreset.css" rel="stylesheet">
+<link href="/animals/index.css" rel="stylesheet">
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon }}">
 
 </head>
@@ -58,7 +58,7 @@
 
     <div id="title">
       <h1><a href="{{ site.url }}/animals">Animal Games Database</a></h1>
-      <h2>🖱️ A Project by <a href="{{ site.url }}" target="_blank">CozyMaus</a> 🐭</h2>
+      <h2>🖱️ A Project by <a href="{{ site.url }}" target="_blank">Liz&nbsp;Berberena</a> 🐭</h2>
     </div>
 
     <!--<form method="get" action="https://www.google.com/search" target="_blank">
