--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,13 +58,9 @@
 
     <div id="title">
       <h1><a href="{{ site.url }}/animals">Animal Games Database</a></h1>
-      <h2>🖱️ A Project by <a href="{{ site.url }}" target="_blank">Liz&nbsp;Berberena</a> 🐭</h2>
+      <h2>🖱️ A Project by <a href="{{ site.url }}" target="_blank">Iris of Lys</a> 🐭</h2>
     </div>
 
-    <!--<form method="get" action="https://www.google.com/search" target="_blank">
-        <input type="hidden" name="sitesearch" value="lizlorena.com/animals" />
-        <input type="text" name="q" maxlength="255" placeholder="Search with Google" />
-        </form>-->
     
     <div id="mainarea">
 
