--- a/_includes/mainmenu.html
+++ b/_includes/mainmenu.html
@@ -1,5 +1,5 @@
 <ul>
-    <li><a href="/" title="Home">Home</a></li>
+    <li><a href="/animals" title="Home">Home</a></li>
     <li><a href="/about" title="About">About</a></li>
     <li><a href="https://forms.gle/jPAwneBK6LCUhGa36" target="_blank" title="To Google Form">Contribute</a></li>
 </ul>
