--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
 
 <p>Welcome to my Animal Games Database, where you can discover all the video games featuring animals as playable characters! 🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
     
-<p>Visit my <a href="https://store.steampowered.com/curator/38329046/">Steam Curator page</a> for my PC game recommendations and reviews.</p>
+<!--<p>Visit my <a href="https://store.steampowered.com/curator/38329046/">Steam Curator page</a> for my PC game recommendations and reviews.</p>-->
 
 <p style="padding-bottom: 0px;">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/irisoflys" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://ko-fi.com/irisoflys" target="_blank">Ko-fi.com/irisoflys</a>.</p>
   
