--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@
 
     <div id="title">
       <h1><a href="{{ site.url }}/animals">Animal Games Database</a></h1>
-      <h2>🖱️ A Project by <a href="{{ site.url }}" target="_blank">Iris of Lys</a> 🐭</h2>
+      <h2>🖱️ A Project by <a href="{{ site.url }}" target="_blank">Liz Lorena</a> 🐭</h2>
     </div>
 
     
