--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,6 +4,6 @@
     
 <!--<p>Visit my <a href="https://store.steampowered.com/curator/38329046/">Steam Curator page</a> for my PC game recommendations and reviews.</p>-->
 
-<p style="padding-bottom: 0px;">If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/irisoflys" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://ko-fi.com/irisoflys" target="_blank">Ko-fi.com/irisoflys</a>.</p>
+<p style="padding-bottom: 0px;">If you found this website useful and enjoy my work, feel free to share it with others. You can also help by donating at <a href="https://ko-fi.com/lizlorena" target="_blank">Ko-fi.com/lizlorena</a>.</p>
   
 </div>
