--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,9 +1,5 @@
 <div class="widget">
 
-<p>Welcome to my Animal Games Database, where you can discover all the video games featuring animals as playable characters! 🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
-    
-<!--<p>Visit my <a href="https://store.steampowered.com/curator/38329046/">Steam Curator page</a> for my PC game recommendations and reviews.</p>-->
-
-<p style="padding-bottom: 0px;">If you found this website useful and enjoy my work, feel free to share it with others. You can also help by donating at <a href="https://ko-fi.com/lizlorena" target="_blank">Ko-fi.com/lizlorena</a>.</p>
-  
+<p style="padding-bottom: 0px;">Welcome to my Animal Games Database, where you can discover all the video games featuring animals as playable characters! 🐉 There are currently <strong>{{ site.posts | size }} entries</strong> in this database.</p>
+      
 </div>
