--- a/_includes/credits.html
+++ b/_includes/credits.html
@@ -1,3 +1,3 @@
 <div id="credits">
-	<p style="text-align:center;margin-bottom:20px;">© {{ site.time | date: '%Y' }} <a href="{{ site.url }}" target="_blank">Liz Lorena Berberena</a></p>
+	<p style="text-align:center;margin-bottom:20px;">© {{ site.time | date: '%Y' }} <a href="{{ site.url }}" target="_blank">Liz Lorena</a></p>
 </div>
