--- a/_includes/support.html
+++ b/_includes/support.html
@@ -1,5 +1,5 @@
 <div class="widget">
 
-<p>If you found this website useful and enjoy my work, feel free to share it with others. Also please consider following me on <a href="http://twitter.com/lorethefour" target="_blank">Twitter</a> for progress updates on all my projects. You can also help by donating at <a href="https://ko-fi.com/lizlorena" target="_blank">Ko-fi.com/lizlorena</a>.</p>
+<p>If you found this website useful and enjoy my work, feel free to share it with others.</p>
 
 </div>
